# cmosher-software-archive

./: .gitignore  README.md  StdAfx.h
AudioEq/: .project
Bin2HexJava/: .project
ByteAnalyzer/: .project  build.gradle  settings.gradle
DosMasterToImage/: .project  a2cdt.jardesc  test.bat
DvDateCode/: .project  test.sub  test.txt
Fields/: .project
FixAppleDisasm/: .project  DOSOUT.TXT.bak
FixAppleDisasm_v1/: test.a65  test.a65.bak  test2.a65  test2.a65.bak  testout.a65  testout2.a65
FixAppleDosAsm/: .project
FixMetaUTF8/: .project  t2.html
GDiffView/: .classpath  .project  1.txt  1.txt.bak  2.txt  2.txt.bak  David_DOS_2.dsk  d.gdiff  david_dos.dsk  test.gdiff  test.trg  test.txt  testtarg.txt
JdbcCommandLine/: pom.xml
MDBLog/: pom.xml
OneFileCopy/: .project
PluginTest/: build.properties  plugin.xml
Pom1_KR/: .project  Monitor_FF00.asm  Monitor_FF00_doc.txt  Pom1.bat  Replica1.bat
RunHalt/: .project
SoftMap/: .project
SplitLogs/: .project
Sudoku/: .classpath
SvnDelta/: .project  test.txt  testtarg.txt
TestServletApp/: .classpath  .project
ZipLock/: .project  ziplock.jardesc
a2catalog/: Makefile.am  configure.ac
a2catalog/m4/: gnulib-cache.m4
a2catalog/po/: POTFILES.in
a2catalog/src/: Makefile.am  a2catalog.c  a2catalog_opt.c  a2catalog_opt.h  a2const.c  a2const.h  a2nibblize.c  a2nibblize_opt.c  a2nibblize_opt.h  aaaaaa_UUID_461ccdf9082a4497b2514fc0f448860b.c  assert_that.c  assert_that.h  nibblize_4_4.c  nibblize_4_4.h  nibblize_5_3.c  nibblize_5_3.h  nibblize_5_3_alt.c  nibblize_5_3_alt.h  nibblize_5_3_common.c  nibblize_5_3_common.h  nibblize_6_2.c  nibblize_6_2.h
a2cdt/: .classpath
a2disasm/: StdAfx.cpp  StdAfx.h  disasm.h  disasm.rc  disasmDlg.cpp  instr.csv  instr.txt
a2diskedit/: .project
a2file2dsk/: file2dsk.cpp
a2mon2hex/: StdAfx.cpp  monhex.dsw
ansel/: .classpath  .project  build.xml  out.xml
apple2/: .project
apple2/modern_tools/disk_tools/a2catalog/src/: Makefile.am  a2catalog.c  a2catalog_opt.c  a2catalog_opt.h  a2nibblize.c  a2nibblize_opt.c  aaaaaa_UUID_461ccdf9082a4497b2514fc0f448860b.c  ctest.c  ctest.h  nibblize_4_4.c  nibblize_4_4.h  nibblize_5_3.c  nibblize_5_3.h  nibblize_5_3_alt.c  nibblize_5_3_alt.h  nibblize_6_2.c
apple2dos/: configure.ac
apple2plat/: .project  4and4enc.txt  6502_addr_work.txt  6502_bug.a2  6502_bug.monitor  6502instr_list_alpha.txt  6502instr_list_decimal.txt  6502instr_list_hex.txt  6502instr_list_hex_addrmode.txt  6502instr_table.txt  6502instr_webpage.txt  APPLESOFT.A65  APPLESOFT.TXT  DOS31NIB.TXT  DOS33_1986_master_clear2.dsk  HIRES_ORANGE_LINES.BAS  INTLST.A65  MINIASM.A65  MON.A65  RAWDOS.dump  SW16RB.A65  UNDERLINE.A2  WOZFPRB.A65  WOZFPRB.TXT  apple1basic.a65  apple1basic.dis6502  apple1basic.disasm  apple_1_mon_ff00.a65  apple_colors_binary.txt  asm.bat  asmdos.bat  asmmon.bat  build.bat  disk2romc600.a65  disk2romc600.disasm4600  diskio.asm  dos31.copy.obj.a65  dos33.a65  dos33.bat  dos33_map.txt  (+12 more)
apple2src/: .project  build.bat  build.sh  config.bat
apple2system/: configure.ac
apple2system/src/monitor/: Makefile.am  apple1mon.m4  cmd.m4  debug.m4  disasm.m4  display2.m4  monitor2.md5  monitor2plus.md5  paddles.m4  symbols.m4h
apple2system/src/monitor/apple2/: Makefile.am
apple2system/src/monitor/apple2plus/: Makefile.am
apple2system/src/monitor/common/: Makefile.am  cmd.m4  display2.m4
applelet/: AppleDisplay.java  Applelet.java  DiskII.java  Em6502.java
asmauto/: Makefile.in  configure  configure.ac
asmauto/autom4te.cache/: output.1  requests  traces.0  traces.1
asmauto/src/: Makefile.am  Makefile.in  asm.m4h  clock.s65  epple2sys.m4  epple2sys.md5
autotools_stuff/: auto_conf_make_help.txt  autonew.sh  gnulib.asciidoc
avisynthscripts/: .project  bounce.avs  bravest.avs  carebears.dal  carefairscare.avs  cheerbearschance.tel  cloudmonster.avs  cloudmonster.tel  grinch.avs  madeline_and_the_gypsies.avs  mosher_chron.txt  mosher_split.txt  mosher_x264.avs  show_changes.avs  spacebubbles.avs  twoprincesses.tel
bgen/: Makefile.am  bgen.1  bgen.c  bootstrap  config.h.in  configure.ac
bgen/lib/: Makefile.in
bindifc/: bindif.dsw  dif.cpp
bindifcmd/: bindifcmd.cpp  dif.cpp
bindiff/: .project
birdsolver/: birdpuzzlesolver.cpp
bkf/: bkf.c
epple2/src/: Makefile.am  Makefile.in  a2colorsobserved.cpp  addressbus.cpp  analogtv.cpp  analogtv.h  apple2.cpp  apple2.h  applentsc.cpp  card.cpp  computercontrolpanel.cpp  computercontrolpanel.h  config.cpp  config.h  contentpane.cpp  contentpane.h  cpu.cpp  diskbytes.h  emulator.cpp  emulator.h  gui.cpp  gui.h  guiemulator.cpp  guiemulator.h  hypermode.h  keyboard.cpp  keyboard.h  languagecard.cpp  main.cpp  memory.cpp  memory.h  monitorcontrolpanel.cpp  monitorcontrolpanel.h  paddles.cpp  paddles.h  picturegenerator.cpp  picturegenerator.h  powerlight.cpp  powerlight.h  powerupreset.cpp  (+13 more)
epple2sdl/: .project  AUTHORS  COPYING.other  Makefile  Makefile.am  Makefile.in  README  aclocal.m4  bootstrap  clock  config.h  config.h.in  config.status  configure  configure.ac  epple2.conf  epple2.dsp  epple2.spec  epple2sdl.kdevelop  libtool  stdin  stdout
epple2sdl/autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
epple2sdl/conf/: Makefile.am  epple2.conf  epple2.conf.a2bare  epple2.conf.a2dos31  epple2.conf.a2dos33  epple2.conf.a2loaded  epple2.conf.a2pbare  epple2.conf.a2pdos33  epple2.conf.a2ploaded  epple2.conf.rev0bare
epple2sdl/installer/: Makefile  Makefile.am  README  epple2.wxs
epple2sdl/src/: Makefile  Makefile.am  Makefile.in  SDL_win32_main.c  a2colorsobserved.cpp  addressbus.cpp  addressbus.h  analogtv.cpp  analogtv.h  apple2.cpp  apple2.h  applentsc.h  card.cpp  card.h  cassette.cpp  cassette.h  clipboardhandler.cpp  clipboardhandler.h  clockcard.cpp  clockcard.h  computercontrolpanel.cpp  computercontrolpanel.h  config.cpp  config.h  configep2.cpp  configep2.h  contentpane.cpp  contentpane.h  cpu.cpp  diskbytes.cpp  diskbytes.h  diskcontroller.cpp  diskcontroller.h  drive.cpp  drive.h  e2const.h  emptyslot.h  emulator.cpp  emulator.h  firmwarecard.cpp  (+54 more)
(+4565 files in other folders)
