METASOURCES=AUTO



bin_PROGRAMS=epple2

AM_CPPFLAGS=$(all_includes)
epple2_LDFLAGS=$(all_libraries)

epple2_SOURCES = a2colorsobserved.cpp addressbus.cpp analogtv.cpp apple2.cpp \
	applentsc.cpp card.cpp clipboardhandler.cpp clockcard.cpp \
	config.cpp cpu.cpp diskbytes.cpp diskcontroller.cpp drive.cpp \
	emptyslot.cpp emulator.cpp firmwarecard.cpp guiemulator.cpp hypermode.cpp \
	keyboard.cpp keyboardbuffermode.cpp languagecard.cpp lowpass_1_5_mhz.cpp \
	lowpass_3_58_mhz.cpp main.cpp memory.cpp monitorcontrolpanel.cpp paddlebuttonstates.cpp \
	paddles.cpp picturegenerator.cpp powerlight.cpp powerupreset.cpp raminitializer.cpp \
	screen.cpp screenimage.cpp slots.cpp speakerclicker.cpp standardin.cpp \
	standardinproducer.cpp standardout.cpp steppermotor.cpp textcharacters.cpp throttle.cpp \
	timable.cpp timinggenerator.cpp video.cpp videoaddressing.cpp videomode.cpp \
	videostaticgenerator.cpp
